<resources>
    <string name="app_name">Video Stream Sample App</string>
    <string name="login">Login</string>
    <string name="register_link">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="registerText"> Do you have an account already? Log in</string>
    <string name="confirmPass">Confirm password</string>
    <string name="successfullyRegistered">Successfully registered. Log in</string>

</resources>
