<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:orientation="vertical">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"/>


        <EditText android:id="@+id/input_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:hint= "@string/email"
                  android:layout_below="@+id/logo"/>

        <EditText android:id="@+id/input_pass"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint= "@string/pass"
                  android:inputType="textPassword"
                  android:layout_below="@id/input_email"/>

       <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:layout_below="@id/input_pass"
            android:text="@string/login"
            android:onClick="playMusic"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/register_link"
                  android:gravity="center"
                  android:layout_below="@id/btn_login"
                  android:onClick="register"/>
    </RelativeLayout>
</ScrollView>