<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:orientation="vertical">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        tools:context=".Activities.RegisterActivity">


        <Button
            android:id="@+id/successBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:onClick="logIn"
            android:visibility="invisible"/>
        <!--email-->
        <TextView
            android:id="@+id/emailRegisterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@+id/successBtn"/>

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@id/emailRegisterTV"/>

        <!--pass-->
        <TextView
            android:id="@+id/passRegisterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:layout_below="@+id/emailRegister"/>

        <EditText
            android:id="@+id/passRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@id/passRegisterTV"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="register"
            android:layout_below="@+id/passRegister"/>

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:gravity="center"
            android:layout_below="@+id/registerBtn"
            android:onClick="logIn"/>



    </RelativeLayout>
</ScrollView>
